--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <!doctype html>
-<title>Watty.top</title>
+<html lang=fr>
+<meta charset=utf-8>
+<meta name=viewport content="width=device-width">
+<link rel=icon href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⚡</text></svg>">
+<style>
+:root { color-scheme: dark; --accent: darkorange }
+a { color: var(--accent); text-decoration: none }
+a:hover, a:focus { text-shadow: 0 0 5px }
+</style>
+<title>watty.top - comparateur de prix des offres d'électricité en France</title>
